# NexusForge

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
nexus_forge/contracts/: events.py  policies.py  workflows.py
nexus_forge/docs/addr/: ADR-000-bootstrap.md
nexus_forge/docs/contracts/: events_v0_1.md
nexus_forge/engines/eventhub/: in_memory.py  ports.py
nexus_forge/engines/flowforge/: runtime.py
nexus_forge/engines/pluginkit/: registry.py
nexus_forge/engines/policyengine/: simple_allowlist.py
nexus_forge/infrastructure/plugins/: logging_plugin.py
nexus_forge/infrastructure/runtime/: demo_startup.py
nexus_forge/tests/contracts/: test_event_envelope_v0_1.py
